# archivist-bot

./: pyproject.toml  run.py
.github/workflows/: main.yml
archivist_bot/: app.py  bot.py  config.py  notion_handler.py
archivist_bot/v1_corpse/: app.py  bot_handler.py  config.py  notion_handler.py
archivist_bot/v2_skeleton/app/: app.py
archivist_bot/v2_skeleton/client/: client.py
archivist_bot/v2_skeleton/server/: server.py
tests/: test_app.py  test_notion_handler.py
